# django-admin-list-filter

./: .bumpversion.cfg  .bumpversion.toml  .codeclimate.yml  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Rakefile  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ruff.yml  test.yml
docs/plans/: 2026-01-25-multi-select-filter-design.md
src/dalf/: admin.py  apps.py
src/dalf/static/admin/css/: django_admin_list_filter.css
src/dalf/static/admin/js/: django_admin_list_filter.js
src/dalf/templates/admin/filter/: django_admin_list_filter.html  django_admin_list_filter_ajax.html  django_admin_list_filter_ajax_multi.html
tests/testproject/: manage.py  pytest.ini
tests/testproject/testapp/: admin.py  conftest.py  factories.py  models.py  tests.py
tests/testproject/testproject/: asgi.py  settings.py
