[project]
name = "dalf"
version = "0.7.1"
authors = [
    { name="Uğur Özyılmazel", email="ugurozyilmazel@gmail.com" },
]
description = "Dead simple autocompletion for Django admin list_filter with goodies."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
]
keywords = ["django", "django admin", "list filter"]

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["Django", "pytest", "pytest-django", "pytest-factoryboy", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/vigo/django-admin-list-filter"
Repository = "https://github.com/vigo/django-admin-list-filter"
Issues = "https://github.com/vigo/django-admin-list-filter/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
